Updating home page to include navbar buttons

--- a/client/src/styles/pages/Home.css
+++ b/client/src/styles/pages/Home.css
@@ -2,8 +2,7 @@
     font-family: 'Playfair Display', serif;
 }
 
-.row {
-    width: 100%;
+.inner-container {
 }
 .Hero {
     background: url("../../assets/landing-image.jpg") no-repeat center fixed;
