Final changes for the project

--- a/client/src/styles/components/Button.css
+++ b/client/src/styles/components/Button.css
@@ -11,6 +11,7 @@
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
+    margin-top: 1.5rem;
 }
 
 .default-btn:hover {
@@ -43,6 +44,7 @@
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
+    margin-top: 1.5rem;
 }
 
 .nav-btn:hover {
